--- a/templates/nft-terms.html
+++ b/templates/nft-terms.html
@@ -52,20 +52,20 @@
                 <li>In order to use certain features of the Service you will need to register for an account on the Service (“Account”). You must be eighteen (18) years old to register for an Account. By creating an Account, you agree to (i) provide accurate, current, and complete Account information about yourself, (ii) maintain and promptly update from time to time as necessary your Account information, (iii) maintain the security of your password and accept all risks of unauthorized access to your Account and the information you provide to us, and (iv) immediately notify us if you discover or otherwise suspect any security breaches related to the Service or your Account. You may not have more than one Account, and Origin reserves the right to block multiple accounts of the same user.</li>
                 <br/>
                 <li>You agree that you will not:
-                    <ul type="disc">
+                    <ol type="disc">
                         <li>Buy, sell, rent, or lease access to your Account or username without our written permission.</li>
                         <li>Register or attempt to register for a new Account without our written permission after your Account has been disabled or deleted by us.</li>
                         <li>Share your Account password with anyone.</li>
                         <li>Log in or try to log in to access the Service through unauthorized third party applications or clients.</li>
-                    </ul>
+                    </ol>
                 </li>
                 <br/>
                 <li> Origin may require you to provide additional information and documents at the request of any competent authority or in order to help Origin comply with applicable law, regulation, or policy, including laws related to anti-laundering (legalization) of incomes obtained by criminal means, or for counteracting financing of terrorism. Origin may also require you to provide additional information and documents in cases where it has reasons to believe that:
-                    <ul type="disc">
+                    <ol>
                         <li>Your Account is being used for money laundering or for any other illegal activity.</li>
                         <li>You have concealed or reported false identification information and other details.</li>
                         <li>Transactions effected via your Account were effected in breach of these Terms.</li>
-                    </ul>
+                    </ol>
                 </li>
                 <br/>
                 In such cases, Origin, in its sole discretion, may pause or cancel your transactions until such requested additional information and documents have been reviewed by Origin and accepted as satisfying the requirements of applicable law, regulation, or policy. If you do not provide complete and accurate information and documents in response to such a request, Origin may refuse to provide any Item, Content, product, service, and/or further access to the Service to you.
@@ -73,7 +73,7 @@
                 <li>By creating an Account, you consent to receive electronic communications from Origin (e.g., via email or by posting notices to the Service). These communications may include notices about your Account (e.g., password changes and other transactional information) and are part of your relationship with us. You agree that any notices, agreements, disclosures or other communications that we send to you electronically will satisfy any legal communication requirements, including, but not limited to, any requirements that such communications be in writing. You should maintain copies of electronic communications from us by printing a paper copy or saving an electronic copy. We have no obligation to store for your later use or access any such electronic communications that we make to you. We may also send you promotional communications via email, including, but not limited to, newsletters, special offers, surveys and other news and information we think will be of interest to you. You may opt out of receiving these promotional emails at any time by following the unsubscribe instructions provided therein.</li>
                 <br/><br/>
                 <li>When you register for an Account, you hereby represent and warrant, to and for the benefit of Origin and its affiliates, as follows:
-                    <ul type="disc">
+                    <ol>
                         <li>Authority. You have all requisite capacity, power and authority to enter into and perform your obligations under these Terms, including to Mint, list, buy, sell or trade any Items. The execution, delivery and performance of, and the performance of your obligations under, these Terms have been duly authorized by all necessary action on your part and on the part of any entity on behalf of which you are entering into these Terms, and no other proceedings are necessary to authorize the execution, delivery or performance of your obligations under these Terms.</li>
                         <li>Due Execution. These Terms constitute your legal, valid and binding obligation, enforceable against you in accordance with these Terms.</li>
                         <li>Accuracy of Information. All information provided to Origin, including any address and social security number or tax ID number, is accurate and complete. None of: (i) you; (ii) any affiliate of any entity on behalf of which you are entering into these Terms; (iii) any other person having a beneficial interest in any entity on behalf of which you are entering into these Terms (or in any affiliate thereof); or (iv) any person for whom you are acting as agent or nominee in connection with these Terms is: (A) a country, territory, entity or individual named on an OFAC list as provided at http://www.treas.gov/ofac, or any person or entity prohibited under the OFAC programs, regardless of whether or not they appear on the OFAC list; or (B) a senior foreign political figure, or any immediate family member or close associate of a senior foreign political figure.</li>
@@ -83,7 +83,7 @@
                         <li>Intellectual Property and Related Matters. You are the sole and exclusive owner of all right, title and interest in and to all rights, including intellectual property rights, incorporated into or otherwise used, held for use or practiced in connection with (or planned by you to be incorporated into or otherwise used, held for use or practiced in connection with) the Item, any Off-Chain Benefits and the Minting of the Item, other than any intellectual property rights that are validly licensed (or provided on a hosted basis) to you pursuant to valid and binding licenses granted to you.</li>
                         <li>Compliance. You have not failed to comply with, and have not violated, any applicable legal requirement relating to any blockchain technologies, token trading activities or Minting Items. No investigation or review by any governmental entity is pending or, to your knowledge, has been threatened against or with respect to you, nor does any government order or action prohibit you or any of your representatives from engaging in or continuing any conduct, activity or practice relating to Minting Items.</li>
                         <li>You must provide all equipment and software necessary to connect to the Service. You are solely responsible for any fees, including Internet connection or mobile fees, that you incur when accessing the Service.</li>
-                    </ul>
+                    </ol>
                 </li>
             </ol>
             <br/><br/>
@@ -150,12 +150,12 @@
                 <li>Use the a Blockchain Platform to carry out any illegal activities in connection with or in any way related to your access to and use of the Service, including but not limited to money laundering, terrorist financing or deliberately engaging in activities designed to adversely affect the performance of the a Blockchain Platform used by the Service, or the Service itself</li>    
                 <li>
                     Engage in or knowingly facilitate any “front-running,” “wash trading,” “pump and dump trading,” “ramping,” “cornering” or fraudulent, deceptive or manipulative trading activities, including:
-                    <ul type="disc">
+                    <ol>
                         <li>trading an Item at successively lower or higher prices for the purpose of creating or inducing a false, misleading or artificial appearance of activity in such Item, unduly or improperly influencing the market price for such Item trading on the Service or establishing a price which does not reflect the true state of the market in such Item</li>
                         <li>executing or causing the execution of any transaction in an Item which involves no material change in the beneficial ownership thereof</li>
                         <li>entering any order for the purchase or sale of an Item with the knowledge that an order of substantially the same size, and at substantially the same price, for the sale of such Item, has been or will be entered by or for the same or different parties</li>
                         <li>participating in, facilitating, assisting or knowingly transacting with any pool, syndicate or joint account organized for the purpose of unfairly or deceptively influencing the market price of an Item</li>
-                    </ul> 
+                    </ol> 
                 </li>
                 <li>Use the Service to carry out any financial activities subject to registration or licensing, including but not limited to using the Service to transact in securities, commodities futures, trading of commodities on a leveraged, margined or financed basis, binary options (including prediction-market transactions), real estate or real estate leases, equipment leases, debt financings, equity financings or other similar transactions</li>
                 <li>Use the Service to participate in fundraising for a business, protocol, or platform, including but not limited to creating, listing, or buying assets that (i) are redeemable for financial instruments, (ii) give owners any rights to participate in an ICO or any securities offering, or (iii) entitle owners to financial rewards, including but not limited to, DeFi yield bonuses, staking bonuses, and burn discounts</li>
@@ -167,7 +167,7 @@
                 <li>Items, listings, smart contracts, collections, and other User Content that Origin in its sole discretion deems inappropriate, disruptive, or illegal are prohibited on the Service. Origin reserves the rights to determine the appropriateness of listings on its site and remove any User Content, including any listing, at any time. If you create or offer an Item, listing, smart contract, or collection in violation of these policies, we reserve the right to take corrective actions, as appropriate, including but not limited to removing the asset, listing, smart contract, or collection, deleting your Account, and permanently withholding referral payments and developer revenue sharing fees or any other payments due and owed to you. Origin cannot destroy or impound your Items or smart contracts, but we reserve the right to destroy inappropriate or illegal metadata stored on our servers.</li>
                 <li>
                     The following User Content is prohibited on the Service, whether included in or made available in or through Items, listings, smart contracts, or collections that include metadata, or otherwise:
-                    <ul type="disc">
+                    <ol>
                         <li>content that violates international or United States intellectual property laws</li>
                         <li>content that promotes suicide or self-harm, incites hate or violence against others, degrades or doxes another individual, depicts minors in sexually suggestive situations, or is otherwise illegal in the United States</li>
                         <li>content with a primary or substantial purpose in a game or application that violates international or United States intellectual property laws, promotes suicide or self-harm, incites hate or violence against others, degrades or doxes another individual, depicts minors in sexually suggestive situations, or is otherwise illegal in the United States</li>
@@ -175,7 +175,7 @@
                         <li>as determined in our sole and absolute discretion, NSFW content and other content that is intended to be age-restricted. Item names, listings and their descriptions, smart contract names, and collections including profanity or overtly sexual content are prohibited. A smart contract that contains NSFW content is subject to being marked NSFW, even if the NSFW content only represents a portion of the content on the smart contract</li>
                         <li>content that includes stolen assets, assets taken without authorization, and otherwise illegally obtained assets, all including but not limited to Items. Listing illegally obtained Items may result in your listings being cancelled, your Items being hidden, or your Account being suspended If you have reason to believe that an asset listed on the Service was illegally obtained, please contact us immediately</li>
                         <li>content that is illegal or offensive, or content that includes or uses profanity or graphic language</li>
-                    </ul>
+                    </ol>
                     <br/>
                     If you become aware of the creation, listing, or buying of assets in violation of any of the terms specified in this section, please contact us at support@originprotocol.com to report it. 
                 </li>
