update team page

--- a/templates/team.html
+++ b/templates/team.html
@@ -232,27 +232,6 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
-                  <img src="/static/img/headshot-anna.jpg" class="headshot" alt="Anna Crouy headshot" />
-                </div>
-                <div class="name">
-                  <a href="https://www.linkedin.com/in/anna-wang-sijia/" target="_blank"
-                    rel="noopener noreferrer">{{ gettext("Anna Crouy") }}
-                  </a>
-                </div>
-                <div class="title">
-                  {{ gettext("Collector Relations") }}
-                </div>
-                <div class="bio">
-                  {{ gettext("Anna helps ensure that top collectors have a direct relationship to the company. Before Origin, Anna managed global social media at
-                  Exness, a leading forex broker. She also co-founded a
-                  non-profit in Australia.") }}
-                </div>
-              </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-xl-4">
-              <div class="team-member">
-                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-nick.jpg" class="headshot" alt="Nick Poulden headshot" />
                 </div>
                 <div class="name">
@@ -438,6 +417,44 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                 </div>
                 <div class="bio">
                   {{ gettext("Chase comes from creative and marketing agency life in Los Angeles. She’s managed projects and accounts for clients like YouTube, W Hotels, and Stitch Fix. She's now in charge of creator relationship management at Origin.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-eric.jpg" class="headshot" alt="Eric Charles headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/eric-charles-86099336/" target="_blank"
+                    rel="noopener noreferrer">{{ gettext("Eric Charles") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Account Manager") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Eric is an experienced account manager with a passion for helping creators be successful on the Origin platform. He previously worked at Jobspring, Lyft, Tophatter, and an influencer marketing firm.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-jon.jpg" class="headshot" alt="Jon Youshaei headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/youshaei/" target="_blank"
+                    rel="noopener noreferrer">{{ gettext("Jon Youshaei") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Creator in Residence") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Jon has spent his career helping creators. Before joining Origin, Jon was responsible for creator monetization marketing at YouTube and product marketing at Instagram. He's also a frequent contributor for Forbes.") }}
                 </div>
               </div>
             </div>
