update team bio for eric

--- a/templates/team.html
+++ b/templates/team.html
@@ -435,7 +435,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Account Manager") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Eric is an experienced account manager with a passion for helping creators be successful on the Origin platform. He previously worked at Jobspring, Lyft, Tophatter, and an influencer marketing firm.") }}
+                  {{ gettext("Eric was an early employee at Lyft and a founding member of their first B2B solution. He was an account manager at Tophatter and worked at a marketing agency connecting brands with creators and celebrities.") }}
                 </div>
               </div>
             </div>
