add link to OGN governance

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -50,6 +50,7 @@
             <a href="{{ url_for('litepaper', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Litepaper") }}</a>
             <a href="{{ url_for('videos', lang_code=CURRENT_LANGUAGE) }}">{{ gettext("Videos") }}</a>
             <a href="{{ universal.GITHUB_URL }}">{{ gettext("GitHub") }}</a>
+            <a href="https://vote.originprotocol.com">{{ gettext("Governance") }}</a>
           </div>
       
         </div>
