Tease upcoming NFT sales

--- a/templates/components/drops.html
+++ b/templates/components/drops.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       {% else %} 
-      <h2>{{gettext("No Drops Scheduled")}}</h2>
+      <h2>{{gettext("Announcements coming soon")}}</h2>
       {% endif %}
   </section>
   <section class="drops-section">
