add kara to the team page

--- a/templates/team.html
+++ b/templates/team.html
@@ -443,7 +443,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
-                  <img src="/static/img/headshot-jon.jpg" class="headshot" alt="Jon Youshaei headshot" />
+                  <img src="/static/img/headshot-jon.jpeg" class="headshot" alt="Jon Youshaei headshot" />
                 </div>
                 <div class="name">
                   <a href="https://www.linkedin.com/in/youshaei/" target="_blank"
@@ -455,6 +455,25 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                 </div>
                 <div class="bio">
                   {{ gettext("Jon has spent his career helping creators. Before joining Origin, Jon was responsible for creator monetization marketing at YouTube and product marketing at Instagram. He's also a frequent contributor for Forbes.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-kara.png" class="headshot" alt="Kara Chang headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/kara-chang-6b277126/" target="_blank"
+                    rel="noopener noreferrer">{{ gettext("Kara Chang") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Executive Assistant") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Kara is the executive assistant to Origin co-founders, Josh and Matt. She graduated from UC San Diego and previously managed a team of 10 people at an ecommerce company in Taiwan.") }}
                 </div>
               </div>
             </div>
