add ed to team page

--- a/templates/team.html
+++ b/templates/team.html
@@ -481,6 +481,25 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-ed.png" class="headshot" alt="Ed Spencer headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/edspencer85/" target="_blank"
+                    rel="noopener noreferrer">{{ gettext("Ed Spencer") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Senior Engineer") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Ed previously worked at Sencha, C3 Energy Network, and Palo Alto Networks as a UI and software architect. He studied at the University of Warwick where he met his lifelong friend and now colleague, Nick Poulden.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-you.png" class="headshot" alt="You headshot" />
                 </div>
                 <div class="name"><a href="https://" target="_blank"
