add poloniex to OGN dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -383,6 +383,11 @@
             <img src="/static/img/ognToken/kraken.png" />
           </a>
         </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
+          <a target="_blank" rel="noopener noreferrer" href="https://poloniex.com/exchange/USDT_OGN">
+            <img src="/static/img/ognToken/poloniex.png" />
+          </a>
+        </div>
       </div>
     </div>
     <br><br>
