--- a/templates/team.html
+++ b/templates/team.html
@@ -500,6 +500,25 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             <div class="col-12 col-md-6 col-xl-4">
               <div class="team-member">
                 <div class="headshot-wrapper">
+                  <img src="/static/img/headshot-aaron.jpg" class="headshot" alt="Aaron Faulkner headshot" />
+                </div>
+                <div class="name">
+                  <a href="https://www.linkedin.com/in/amfaulkner/" target="_blank"
+                    rel="noopener noreferrer">{{ gettext("Aaron Faulkner") }}
+                  </a>
+                </div>
+                <div class="title">
+                  {{ gettext("Social Media Manager") }}
+                </div>
+                <div class="bio">
+                  {{ gettext("Aaron has spent his career building and managing communities. He has specialized in writing, community management, and marketing for multiple crypto companies. He also served as a long-term member of the community team at Origin before joining fulltime.") }}
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-4">
+              <div class="team-member">
+                <div class="headshot-wrapper">
                   <img src="/static/img/headshot-you.png" class="headshot" alt="You headshot" />
                 </div>
                 <div class="name"><a href="https://" target="_blank"
@@ -536,14 +555,6 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
           </div>
           <div class="name">
             {{ gettext("Zoe Hoang") }}
-          </div>
-        </div>
-        <div class="team-member">
-          <div class="headshot-wrapper">
-            <img src="/static/img/headshot-aaron.jpg" class="headshot" alt="Aaron Faulkner headshot" />
-          </div>
-          <div class="name">
-            {{ gettext("Aaron Faulkner") }}
           </div>
         </div>
         <div class="team-member">
