--- a/templates/team.html
+++ b/templates/team.html
@@ -511,7 +511,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Social Media Manager") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Aaron has spent his career building and managing communities. He has specialized in writing, community management, and marketing for multiple crypto companies. He also served as a long-term member of the community team at Origin before joining fulltime.") }}
+                  {{ gettext("Aaron has spent his career building and managing communities. He served as a long-term member of our community team before joining fulltime to help us with social media, content, and marketing at Origin.") }}
                 </div>
               </div>
             </div>
