update kays title

--- a/templates/team.html
+++ b/templates/team.html
@@ -155,7 +155,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   </a>
                 </div>
                 <div class="title">
-                  {{ gettext("Finance & Operations") }}
+                  {{ gettext("Director of BD & Ops") }}
                 </div>
                 <div class="bio">
                   {{ gettext("Kay is a Chartered Professional Accountant (CPA).
