--- a/templates/nft-banner.html
+++ b/templates/nft-banner.html
@@ -6,7 +6,7 @@
         <h1>{{gettext("Interested in running an NFT sale?")}}</h1>
       </div>
       <div class="col-12 col-lg-3 banner-button text-center p-3 mt-4 mt-lg-0">
-        <a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSf1ArOFye1PWZshoQI5a3TJWIYShC89G6-R8mPgAt92dSiJ9w/viewform" target="_blank" rel="noopener noreferrer">{{gettext("Yes, please!")}}</a>
+        <a class="btn btn-lg btn-primary" href="https://story.xyz" target="_blank" rel="noopener noreferrer">{{gettext("Yes, please!")}}</a>
       </div>
     </div>
   </div>
